Fixing Skull More Cares display on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -820,6 +820,7 @@
 			width: 80%;
 			img {
 				max-height: 100%;
+				max-width: 100%;
 				width: auto;
 			}
 		}
